Fix bug category.
